k8s/grpc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-server
  namespace: monitoring
  labels:
    app: grpc-server
spec:
  selector:
    app: grpc-server
  ports:
    - name: grpc
      port: 50051
      targetPort: 50051
    - name: metrics
      port: 2112
      targetPort: 2112
  type: ClusterIP
