k8s/influxdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: influxdb
  namespace: monitoring
spec:
  type: NodePort
  selector:
    app: influxdb
  ports:
    - name: http
      port: 8086
      targetPort: 8086
      nodePort: 30086
